--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[88, 29, 41, 18, 19, 73, 81, 16, 28, 57, 40, 94, 93, 14, 68, 37, 91, 76, 12, 36, 60, 71, 31, 39, 0, 56, 26, 2, 9, 21, 79, 33, 99, 86, 100, 15, 58, 85, 45, 61, 63, 66, 92, 98, 49, 25, 74, 35, 67, 82, 11, 95, 34, 69, 80, 96, 77, 90, 7, 51, 53, 43, 89, 78, 32, 48, 55, 5, 38, 44, 46, 24, 50, 59, 47, 72, 10, 75, 52, 84]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(101),80)\n",
+    "print(sample_list_1)\n"
    ]
   },
   {
@@ -54,11 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -77,11 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 65, 46, 77, 95, 69, 23, 5, 74, 81, 53, 86, 56, 85, 32, 80, 98, 95, 28, 27, 48, 20, 58, 19, 62, 18, 14, 99, 40, 24, 7, 2, 49, 82, 92, 64, 73, 5, 61, 44, 26, 51, 21, 60, 88, 34, 51, 63, 94, 77, 59, 26, 100, 9, 0, 68, 54, 94, 23, 91, 16, 98, 19, 72, 79, 58, 56, 19, 76, 89, 21, 94, 5, 62, 31, 96, 77, 39, 71, 59]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2=[]\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.choice(range(101)))\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2=set(sample_list_2)\n",
+    "print(len(set2))\n"
    ]
   },
   {
@@ -109,11 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 11, 12, 15, 25, 29, 33, 35, 36, 37, 38, 41, 43, 45, 47, 50, 52, 55, 57, 66, 67, 75, 78, 84, 90, 93}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3=set1.difference(set2)\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -125,11 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{64, 65, 20, 54, 23, 27, 62}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4=set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 5, 7, 9, 14, 16, 18, 19, 21, 24, 26, 28, 31, 32, 34, 39, 40, 44, 46, 48, 49, 51, 53, 56, 58, 59, 60, 61, 63, 68, 69, 71, 72, 73, 74, 76, 77, 79, 80, 81, 82, 85, 86, 88, 89, 91, 92, 94, 95, 96, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)\n"
    ]
   },
   {
@@ -165,11 +239,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1)>len(set2))\n",
+    "print((len(set3)<len(set1)) & (len(set3)<len(set2)))\n",
+    "print((len(set4)<len(set1)) & (len(set4)<len(set3)))\n",
+    "print((len(set5)<len(set1)) & (len(set5)<len(set2)))\n"
    ]
   },
   {
@@ -181,11 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6=set()"
    ]
   },
   {
@@ -197,11 +287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 5, 7, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 55, 56, 57, 58, 59, 60, 61, 63, 66, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 86, 88, 89, 90, 91, 92, 93, 94, 95, 96, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3,set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6\n"
    ]
   },
   {
@@ -229,11 +341,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -247,11 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set123=set3.union(set4.union(set5))\n",
+    "set12=set1.union(set2)\n",
+    "print(set123 == set12)"
    ]
   },
   {
@@ -263,11 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "{2, 5, 7, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 55, 56, 57, 58, 59, 60, 61, 63, 66, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 86, 88, 89, 90, 91, 92, 93, 94, 95, 96, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "popset1=set1.pop()\n",
+    "print(popset1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +429,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 5, 7, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 55, 56, 57, 58, 59, 60, 61, 63, 66, 67, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 86, 88, 89, 90, 91, 92, 93, 94, 95, 96, 98, 99, 100}\n",
+      "{0, 2, 5, 7, 10, 12, 14, 15, 16, 18, 24, 25, 26, 28, 32, 33, 34, 35, 36, 37, 38, 40, 43, 44, 45, 46, 47, 48, 50, 52, 53, 55, 56, 57, 58, 60, 63, 66, 67, 68, 72, 73, 74, 75, 76, 77, 78, 80, 82, 84, 85, 86, 88, 90, 92, 93, 94, 95, 96, 98, 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "print(set1)\n",
+    "\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for e in list_to_remove:\n",
+    "    set1.discard(e)\n",
+    "\n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
