--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100), k=80)\n",
+    "print(sample_list_1)\n",
+    "\n",
+    "print(len(sample_list_1))\n"
    ]
   },
   {
@@ -54,11 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "print(sample_list_1)\n",
+    "\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -77,11 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91, 33, 12, 45, 22, 67, 65, 54, 35, 15, 90, 68, 60, 72, 41, 47, 32, 57, 9, 3, 45, 69, 49, 88, 30, 73, 40, 55, 41, 72, 99, 2, 43, 86, 96, 71, 90, 75, 61, 90, 5, 13, 91, 62, 42, 41, 33, 27, 6, 81, 41, 78, 31, 14, 36, 90, 12, 79, 0, 65, 83, 34, 43, 6, 35, 86, 14, 5, 65, 11, 53, 68, 43, 83, 25, 22, 73, 39, 29, 49]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2=[]\n",
+    "\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.choice(range(100)))\n",
+    "    \n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2=set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +142,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 4, 7, 8, 10, 16, 17, 18, 19, 20, 21, 24, 26, 28, 37, 38, 46, 48, 51, 52, 56, 58, 59, 63, 66, 70, 74, 76, 77, 80, 82, 89, 92, 93, 95, 97, 98}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1,\n",
+       " 4,\n",
+       " 7,\n",
+       " 8,\n",
+       " 10,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 24,\n",
+       " 26,\n",
+       " 28,\n",
+       " 37,\n",
+       " 38,\n",
+       " 46,\n",
+       " 48,\n",
+       " 51,\n",
+       " 52,\n",
+       " 56,\n",
+       " 58,\n",
+       " 59,\n",
+       " 63,\n",
+       " 66,\n",
+       " 70,\n",
+       " 74,\n",
+       " 76,\n",
+       " 77,\n",
+       " 80,\n",
+       " 82,\n",
+       " 89,\n",
+       " 92,\n",
+       " 93,\n",
+       " 95,\n",
+       " 97,\n",
+       " 98}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3=[]\n",
+    "\n",
+    "for i in set1:\n",
+    "    if i not in set2:\n",
+    "        set3.append(i)\n",
+    "print(set(set3))\n",
+    "set3=set(set3)\n",
+    "\n",
+    "#También podría hacer así \n",
+    "set1.difference(set2)"
    ]
   },
   {
@@ -125,11 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 67, 36, 72, 42, 11, 79, 83, 53, 86, 55, 30}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4=set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +248,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 5, 6, 9, 12, 13, 14, 15, 22, 25, 27, 29, 31, 33, 34, 35, 39, 40, 41, 43, 45, 47, 49, 54, 57, 60, 61, 62, 65, 68, 69, 71, 73, 75, 78, 81, 88, 90, 91, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +282,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "55\n",
+      "37\n",
+      "12\n",
+      "43\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n",
+    "\n",
+    "len(set3)+len(set5)==len(set1)\n",
+    "len(set4)+len(set5)==len(set2)\n"
    ]
   },
   {
@@ -181,11 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6=set()\n",
+    "print(set6)"
    ]
   },
   {
@@ -197,11 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 31, 33, 34, 35, 37, 38, 39, 40, 41, 43, 45, 46, 47, 48, 49, 51, 52, 54, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 80, 81, 82, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3, set5)\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1==set6"
    ]
   },
   {
@@ -229,11 +409,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.issubset(set2)\n",
+    "set1.issubset(set3)"
    ]
   },
   {
@@ -247,11 +440,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 86, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 86, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set_union=set3.union(set4, set1)\n",
+    "print(set_union)\n",
+    "\n",
+    "set_union2=set_union.union(set1, set2)\n",
+    "print(set_union2)\n",
+    "\n",
+    "set_union==set_union2"
    ]
   },
   {
@@ -263,11 +482,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 31, 33, 34, 35, 37, 38, 39, 40, 41, 43, 45, 46, 47, 48, 49, 51, 52, 54, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 80, 81, 82, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 31, 33, 34, 35, 37, 38, 39, 40, 41, 43, 45, 46, 47, 48, 49, 51, 52, 54, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 80, 81, 82, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1)\n",
+    "\n",
+    "set1.pop()\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +516,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1 {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 26, 27, 28, 29, 31, 33, 34, 35, 37, 38, 39, 40, 41, 43, 45, 46, 47, 48, 49, 51, 52, 54, 56, 57, 58, 59, 60, 61, 62, 63, 65, 66, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 80, 81, 82, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n",
+      "set7 {1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99}\n",
+      "set1 removed {2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 22, 24, 25, 26, 27, 28, 33, 34, 35, 37, 38, 40, 43, 45, 46, 47, 48, 52, 54, 56, 57, 58, 60, 62, 63, 65, 66, 68, 70, 73, 74, 75, 76, 77, 78, 80, 82, 88, 90, 92, 93, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "print('set1', set1)\n",
+    "\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "set7=set(list_to_remove)\n",
+    "print('set7', set7)\n",
+    "    \n",
+    "set1.difference_update(set7)\n",
+    "print('set1 removed', set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
