--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[79, 54, 39, 57, 24, 20, 31, 43, 38, 9, 55, 11, 1, 48, 52, 21, 15, 94, 81, 29, 6, 14, 28, 23, 47, 10, 97, 26, 8, 41, 30, 96, 60, 0, 80, 59, 76, 87, 37, 98, 3, 4, 82, 86, 33, 35, 66, 75, 42, 12, 18, 77, 5, 95, 84, 70, 89, 36, 7, 34, 83, 49, 32, 53, 50, 90, 73, 93, 74, 64, 13, 44, 92, 67, 19, 61, 22, 46, 69, 56]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "list_1 = range(0,101)\n",
+    "sample_list_1 = random.sample(list_1,80)\n",
+    "\n",
+    "print (sample_list_1)\n",
+    "\n"
    ]
   },
   {
@@ -54,11 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 = set(sample_list_1)\n",
+    "print (len(set1))\n"
    ]
   },
   {
@@ -77,11 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[97, 34, 98, 87, 78, 53, 100, 93, 70, 36, 59, 81, 5, 68, 2, 99, 63, 20, 79, 50, 91, 24, 60, 68, 86, 74, 46, 70, 25, 18, 33, 66, 71, 1, 77, 30, 76, 70, 43, 96, 22, 83, 4, 42, 98, 51, 65, 72, 78, 66, 46, 80, 0, 75, 89, 92, 56, 9, 12, 57, 19, 19, 82, 22, 35, 12, 82, 82, 80, 0, 60, 19, 78, 1, 42, 49, 17, 38, 95, 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range (80):\n",
+    "    sample_list_2.append(random.randint(0, 100))\n",
+    "\n",
+    "print (sample_list_2)"
    ]
   },
   {
@@ -93,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2 = set(sample_list_2)\n",
+    "print (len(set2))\n"
    ]
   },
   {
@@ -109,11 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6, 7, 8, 10, 11, 13, 14, 15, 21, 23, 26, 28, 29, 31, 32, 37, 39, 41, 44, 47, 48, 52, 54, 55, 61, 64, 67, 69, 73, 84, 94}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set3 = set1.difference(set2)\n",
+    "print (set3)\n",
+    "\n"
    ]
   },
   {
@@ -125,11 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{65, 2, 99, 68, 100, 71, 72, 78, 17, 51, 25, 91, 63}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set4 = set2.difference(set1)\n",
+    "print (set4)\n"
    ]
   },
   {
@@ -141,11 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 4, 5, 9, 12, 18, 19, 20, 22, 24, 30, 33, 34, 35, 36, 38, 42, 43, 46, 49, 50, 53, 56, 57, 59, 60, 66, 70, 74, 75, 76, 77, 79, 80, 81, 82, 83, 86, 87, 89, 90, 92, 93, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set5 = set1.intersection(set2)\n",
+    "print (set5)\n"
    ]
   },
   {
@@ -165,11 +236,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "61\n",
+      "32\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (len(set1))\n",
+    "print (len(set2))\n",
+    "print (len(set3))\n",
+    "print (len(set4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "print (len(set5))\n",
+    "\n",
+    "len(set1)==(len(set3)+len(set5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set2)==(len(set4)+len(set5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "len(set3)==(len(set1)-len(set5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set4)==(len(set2)-len(set5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set5)==(len(set1)-len(set3))+(len(set2)-(len(set4)))"
    ]
   },
   {
@@ -181,11 +383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6 = set()\n",
+    "\n"
    ]
   },
   {
@@ -197,11 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3, set5)"
    ]
   },
   {
@@ -213,11 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Son iguales\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "if set1 == set6:\n",
+    "    print (\"Son iguales\")\n",
+    "else:\n",
+    "    print (\"No son iguales\")"
    ]
   },
   {
@@ -229,11 +443,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2.issubset(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set3.issubset(set1)"
    ]
   },
   {
@@ -247,11 +492,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "if set3.union(set4, set5) == set3.union(set1, set2):\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print (False)"
    ]
   },
   {
@@ -263,11 +519,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79\n",
+      "{1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 18, 19, 20, 21, 22, 23, 24, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 41, 42, 43, 44, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 59, 60, 61, 64, 66, 67, 69, 70, 73, 74, 75, 76, 77, 79, 80, 81, 82, 83, 84, 86, 87, 89, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1.pop()\n",
+    "print(len(set1))\n",
+    "print (set1)"
    ]
   },
   {
@@ -283,12 +550,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "set_list_to_remove = set(list_to_remove)\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "    if i in set1:\n",
+    "        set1.remove(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 18, 20, 22, 23, 24, 26, 28, 30, 32, 33, 34, 35, 36, 37, 38, 42, 43, 44, 46, 47, 48, 50, 52, 53, 54, 55, 56, 57, 60, 64, 66, 67, 70, 73, 74, 75, 76, 77, 80, 82, 83, 84, 86, 87, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
